26-02-2007 Qball <Qball@Sarine.nl>
	* src/browsers/playlist3-file-brwoser: only update when model available

25-02-2007 Qball <Qball@sarine.nl>
	* src/gmpc-mpddata-backend.gob:	Add custom backend for showing mpd-data's
	* src/browsers/playlist-file-browser: make use of custom backend.

24-02-2007 Qball <Qball@Sarine.nl>
	* src/playlist3-find3-browser: Don't add songs, play them.
	* src/playlist3-find3-browser: Add support for server side search
	* configure.ac:	Depend on libmpd 0.13.1

23-02-2007 Qball <Qball@Sarine.nl>
	* src/playlist3-metadata-browser.c: Fix memory leak
	* src/playlist3.c:	Remove trailing ;

22-02-2007 Qball <Qball@Sarine.nl>
	* src/playlist3.c:	Make option menu insensitive when it has no children.
	* src/playlist3.c:	Check if the browser has a ->(un)selected  function.
	* src/playlist3-artist-browser.c: Make an option to show artist images


18-02-2007 Qball <Qball@Sarine.nl>
	* src/Makefile.build:				Remove useless include.
	* src/playlist3-current-playlist.c:	Added date column
	* src/playlist3-information.c:		Hopefully fix alignment issues
	* src/playlist3-metadata.c:			Hopefully fix alignment issues
	* configure.ac:						Bump version to 0.14.1
	* src/eggcolumnmodel.c:				Add mising iter_children function to model interface.


17-02-2007 Qball <Qball@Sarine.nl>
	* src/main.c:	Change order, so config isn't destroyed before f.e. meta
	data thread uses it.

01-02-2007 Qball <Qball@Sarine.nl.
	* src/playlist3.c:	Make pl3_window_fullscreen function.
	* glade/playlist3.glade:	Add fullscreen menu entry.

31-01-2007 Qball <Qball@Sarine.nl>
	* src/main.c:	A non-svn version by default no longer displays debug
	information.
	* src/main.c:	Ignore MPD_ACK_ERROR_EXISTS errors so playlist out of
	sync is handled less obstructive. (it does seem to correct itself anyway)
	* src/playlist-list.c:	Don't crash if you can't fetch the song.
	* src/main.c:	Stop error message spammage

26-01-2007 Qball <Qball@Sarine.nl>
    * src/id3info.c:				Add some performer code.