@@ -1,4 +1,6 @@
 26-02-2007 Qball <Qball@Sarine.nl>
+	* src/gmpc-mpddata-model.gob:	Add support for an up row.
+	* src/browsers/playlist3-file-brwoser: Use the up_row support 
 	* src/browsers/playlist3-file-brwoser: only update when model available
 
 25-02-2007 Qball <Qball@sarine.nl>
